2006-06-28  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PedigreeView.py (PedigreeView.rebuild): use gtk.Arrow
	instead of unicode characters

2006-06-27  Brian Matherly  <brian@gramps-project.org>
	* src/GampsLogger/_ErrorReportAssistant.py: fix error message in Windows
	* src/plugins/DetDescendantReport.py: remove duplicate birth events
	* src/plugins/IndivComplete.py: remove duplicate birth events
	* src/plugins/NarrativeWeb.py: remove duplicate birth events (bug #235)
	* src/plugins/DetAncestralReport.py: remove duplicate birth events
	* src/plugins/FamilyGroup.py: remove duplicate birth events

2006-06-26  Don Allingham  <don@gramps-project.org>
	* src/ReportBase/_ReportDialog.py (report): catch IOError
	* src/Filters/Rules/Person/_HasDeath.py: use references instead of
	handles

2006-06-24  Alex Roitman  <shura@gramps-project.org>
	* src/NameDisplay.py (_format_base): Add format string display;
	(_format_raw, _format): Add format string methods.
	* src/GrampsCfg.py (name_changed): Switch back to int key.
	* data/gramps.schemas.in: Add name-format-str key for custom name
	display format string.
	* src/Config/_GrampsConfigKeys.py: Re-generate the file.
	* src/Config/gen_schema_keys.py (copy): Add Id string; 
	Write header into the generated file.

2006-06-24  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/BookReport.py: fix book loading

2006-06-24  Alex Roitman  <shura@gramps-project.org>
	* src/ReportBase/_ReportDialog.py (report): Handle wm closing.
	* src/plugins/GraphViz.py (GraphVizDialog.__init__): Handle wm
	closing. 
	* src/plugins/NarrativeWeb.py (WebReportDialog.__init__): Handle
	wm closing.

2006-06-24  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py: fix comment
	* src/plugins/DecendChart.py: fix comment
	* src/plugins/TimeLine.py: Remove Title option

2006-06-24  Alex Roitman  <shura@gramps-project.org>
	* debian/control (Build-Depends-Indep): Add xsltproc
