@@ -1,3 +1,7 @@
+2006-06-30  Don Allingham  <don@gramps-project.org>
+	* src/GrampsWidgets.py: Add GenderWidget to try to isolate windows 
+	font problems
+
 2006-06-28  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_PedigreeView.py (PedigreeView.rebuild): use gtk.Arrow
 	instead of unicode characters
